--- a/src/app/features/users/add-edit-user/add-edit-user.component.html
+++ b/src/app/features/users/add-edit-user/add-edit-user.component.html
@@ -151,14 +151,7 @@
   </mat-dialog-content>
 
   <mat-dialog-actions align="end" class="dialog-actions">
-    <button
-      mat-button
-      type="button"
-      (click)="onCancel()"
-      [disabled]="isLoading"
-    >
-      Cancel
-    </button>
+    <button mat-button type="button" (click)="onCancel()">Cancel</button>
     <button
       mat-raised-button
       [color]="isAddMode ? 'primary' : 'accent'"
