--- a/src/app/features/users/add-edit-user/add-edit-user.component.html
+++ b/src/app/features/users/add-edit-user/add-edit-user.component.html
@@ -151,14 +151,32 @@
   </mat-dialog-content>
 
   <mat-dialog-actions align="end" class="dialog-actions">
-    <button mat-button type="button" (click)="onCancel()">Cancel</button>
- <button mat-raised-button
-  [color]="isAddMode ? 'primary' : 'accent'"
-  type="submit"
-  (click)="onSubmit()"
-  [disabled]="userForm.invalid">
-  <mat-icon>{{ isAddMode ? 'add' : 'save' }}</mat-icon>
-  <span>{{ isAddMode ? 'Create User' : 'Update User' }}</span>
-</button>
+    <button
+      mat-button
+      type="button"
+      (click)="onCancel()"
+      [disabled]="isLoading"
+    >
+      Cancel
+    </button>
+    <button
+      mat-raised-button
+      [color]="isAddMode ? 'primary' : 'accent'"
+      type="submit"
+      (click)="onSubmit()"
+      [disabled]="userForm.invalid || isLoading"
+    >
+      @if (isLoading) {
+      <ng-container>
+        <mat-spinner diameter="20" class="button-spinner"></mat-spinner>
+        <span>{{ isAddMode ? 'Creating...' : 'Updating...' }}</span>
+      </ng-container>
+      } @else {
+      <ng-container>
+        <mat-icon>{{ isAddMode ? 'add' : 'save' }}</mat-icon>
+        <span>{{ isAddMode ? 'Create User' : 'Update User' }}</span>
+      </ng-container>
+      }
+    </button>
   </mat-dialog-actions>
 </div>
