--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -7,3 +7,24 @@ $desire: #ef4157;
 $color-white: #fff;
 $global-fonts: 'Nunito', sans-serif;
 $successNotifcation: #30cb83;
+
+// Breakpoints
+$breakpoint-xs: 480px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 1024px;
+$breakpoint-lg: 1200px;
+$breakpoint-xl: 1440px;
+
+// Spacing
+$spacing-xs: 4px;
+$spacing-sm: 8px;
+$spacing-md: 16px;
+$spacing-lg: 24px;
+$spacing-xl: 32px;
+$spacing-xxl: 48px;
+
+// Container widths
+$container-sm: 540px;
+$container-md: 720px;
+$container-lg: 960px;
+$container-xl: 1140px;
